--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
   "homepage": "https://github.com/TooNote/client.xiaotu.io#readme",
   "dependencies": {},
   "devDependencies": {
+    "axios": "^0.19.2",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
+    "url-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.2"
