--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/TooNote/client.xiaotu.io#readme",
   "dependencies": {},
   "devDependencies": {
+    "@toonote/md-editor": "^1.0.0-alpha.1",
     "axios": "^0.19.2",
+    "axios-rest-client": "^0.1.11",
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "html-webpack-harddisk-plugin": "^1.0.1",
@@ -28,6 +30,7 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
+    "uuid": "^3.4.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
