--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "axios": "^0.19.2",
     "axios-rest-client": "^0.1.11",
     "css-loader": "^3.4.2",
+    "eases": "^1.0.8",
     "file-loader": "^5.0.2",
+    "highlight.js": "^9.18.1",
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "inline-css": "^2.6.2",
+    "remarkable": "^2.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
