--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "inline-css": "^2.6.2",
+    "lodash": "^4.17.15",
     "remarkable": "^2.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
