open and delete note.

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
     "uuid": "^3.4.0",
+    "v-contextmenu": "^2.9.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
+    "vue-runtime-helpers": "^1.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
