--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server",
     "build:dev": "webpack",
-    "build:prod": "NODE_ENV=production webpack"
+    "build:prod": "rimraf dist&&NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,6 @@
     "url": "https://github.com/TooNote/client.xiaotu.io/issues"
   },
   "homepage": "https://github.com/TooNote/client.xiaotu.io#readme",
-  "dependencies": {},
   "devDependencies": {
     "@toonote/md-editor": "^1.0.0-alpha.1",
     "axios": "^0.19.2",
@@ -33,6 +32,7 @@
     "inline-css": "^2.6.2",
     "lodash": "^4.17.15",
     "remarkable": "^2.0.0",
+    "rimraf": "^3.0.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "url-loader": "^3.0.0",
