--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^3.2.0",
     "inline-css": "^2.6.2",
     "lodash": "^4.17.15",
+    "node-forge": "^0.9.1",
     "remarkable": "^2.0.0",
     "rimraf": "^3.0.1",
     "ts-loader": "^6.2.1",
