--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@toonote/md-editor": "^1.0.0-alpha.2",
     "axios": "^0.19.2",
     "axios-rest-client": "^0.1.11",
+    "copy-webpack-plugin": "^5.1.1",
     "cos-js-sdk-v5": "^0.5.22",
     "css-loader": "^3.4.2",
     "eases": "^1.0.8",
